// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTooltipBase show shows tooltip 1`] = `
Object {
  "className": "Tooltip Tooltip--top",
  "id": "tooltip-1",
  "style": Object {
    "left": "190px",
    "setProperty": [MockFunction] {
      "calls": Array [
        Array [
          "--arrow-position",
          "50%",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "top": "81px",
  },
  "textContent": "Test",
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when placement is bottom 1`] = `
Object {
  "className": "Tooltip Tooltip--bottom",
  "id": "tooltip-1",
  "style": Object {
    "left": "190px",
    "setProperty": [MockFunction] {
      "calls": Array [
        Array [
          "--arrow-position",
          "50%",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "top": "159px",
  },
  "textContent": "Test",
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when placement is left 1`] = `
Object {
  "className": "Tooltip Tooltip--left",
  "id": "tooltip-1",
  "style": Object {
    "left": "71px",
    "setProperty": [MockFunction] {
      "calls": Array [
        Array [
          "--arrow-position",
          "50%",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "top": "120px",
  },
  "textContent": "Test",
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when placement is right 1`] = `
Object {
  "className": "Tooltip Tooltip--right",
  "id": "tooltip-1",
  "style": Object {
    "left": "309px",
    "setProperty": [MockFunction] {
      "calls": Array [
        Array [
          "--arrow-position",
          "50%",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "top": "120px",
  },
  "textContent": "Test",
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when the tooltip position exceeds the window width 1`] = `
Object {
  "className": "Tooltip Tooltip--top",
  "id": "tooltip-1",
  "style": Object {
    "left": "224px",
    "setProperty": [MockFunction] {
      "calls": Array [
        Array [
          "--arrow-position",
          "72%",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "top": "81px",
  },
  "textContent": "Test",
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when the tooltip position is negative 1`] = `
Object {
  "className": "Tooltip Tooltip--top",
  "id": "tooltip-1",
  "style": Object {
    "left": "0px",
    "setProperty": [MockFunction] {
      "calls": Array [
        Array [
          "--arrow-position",
          "25%",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "top": "81px",
  },
  "textContent": "Test",
}
`;
